Bug #203344 r=darin, sr=alecf Code from Alfred Kayser - optimization in nsJarChannel